2012-20-04 AlexanderR <alexanderr at gmx dot com>

        * 6.13.12-1 :
        new upstream release.

2012-07-04 AlexanderR <alexanderr at gmx dot com>

        * 6.13.11-1 :
        new upstream release.

2012-16-03 AlexanderR <alexanderr at gmx dot com>

	* 6.13.9-1 :
	re-split package python-renpy into two. added ChangeLog.
	added jedit-external.diff to split jedit into optdepends.
	added profile.d scripts to export RENPY_BASE.
	added icon, launcher script and .desktop file.
	creation of link from /usr/share/renpy/doc to /usr/share/doc/renpy.