@@ -1,12 +1,12 @@
 # Maintainer: taylorchu
 
 pkgname=fcitx-mini
-pkgver=20120519
+pkgver=20120522
 pkgrel=1
 pkgdesc="fcitx gtk2 without any input method"
 arch=("i686" "x86_64")
 license=('GPL')
-url="http://code.google.com/p/fcitx"
+url="https://github.com/fcitx/fcitx"
 depends=('pango' 'gtk2')
 makedepends=('git' 'intltool' 'cmake')
 replaces=('fcitx')
@@ -16,7 +16,7 @@ md5sums=('19aa5f00ea804eeb659adc58a3f98f85')
 install=fcitx-mini.install
 
 _gitname="fcitx"
-_gitroot="http://fcitx.googlecode.com/git"
+_gitroot="https://github.com/fcitx/fcitx.git"
 
 build() {
   cd "$srcdir"
@@ -31,13 +31,9 @@ build() {
   fi
 
   msg "Clean other IM"
-  rm -rf $srcdir/fcitx/src/im
-  mkdir -p $srcdir/fcitx/src/im
-  touch $srcdir/fcitx/src/im/CMakeLists.txt
+  :> $srcdir/fcitx/src/im/CMakeLists.txt
 
-  rm -rf $srcdir/fcitx/tools
-  mkdir -p $srcdir/fcitx/tools
-  touch $srcdir/fcitx/tools/CMakeLists.txt
+  :> $srcdir/fcitx/tools/CMakeLists.txt
 
   cp $startdir/CMakeLists.txt $srcdir/fcitx/data/CMakeLists.txt
 
