@@ -3,7 +3,7 @@
 pkgbase="linux-fedora"
  pkgname=linux-fedora       # Build kernel with a different name
 _kernelname=${pkgname#linux}
-_basekernel=3.3.6
+_basekernel=3.3.7
 pkgver=${_basekernel}
 pkgrel=1
 makedepends=('xmlto' 'docbook-xsl')
@@ -11,7 +11,7 @@ arch=(i686 x86_64)
 license=('GPL2')
 url="http://www.kernel.org"
 options=(!strip)
-source=(ftp://ftp.kernel.org/pub/linux/kernel/v3.x/linux-${pkgver}.tar.xz
+source=(http://www.kernel.org/pub/linux/kernel/v3.x/linux-${pkgver}.tar.xz
         # the main kernel config files
         config-i386 config.x86_64
         # standard config files for mkinitcpio ramdisk
@@ -326,7 +326,7 @@ package() {
 }
 
 
-md5sums=('cc8abb76be5af471b4a5d68c7e348850'
+md5sums=('3bbaae2ab70156298c9230dcb24650d9'
          '3047e7326ec52a678b8af911c13d0a17'
          '6f50953315aa848905d051c64b5b7862'
          '4a53bf996d106109507451109a5ad2d0'
