@@ -2,7 +2,7 @@
 # arg 2:  the old package version
 
 KERNEL_NAME=-fedora
-KERNEL_VERSION=3.3.6-fedora
+KERNEL_VERSION=3.3.7-fedora
 
 post_install () {
   # updating module dependencies
