@@ -1,3 +1,8 @@
+2012-23-04 AlexanderR <alexanderr at gmx dot com>
+
+        * 6.13.12-1 :
+        Added notice abot RENPY_BASE usage to renpy.install.
+
 2012-20-04 AlexanderR <alexanderr at gmx dot com>
 
         * 6.13.12-1 :
